allow --add-modules add modules that aren't in the runtime image